Changelog:

3.18
- Fixed spelling mistake in the "Item Deleteion Warning" window

3.17c
- Fixed the "/tbcprep ghetto" command to work with the TBC Prepatch changes
- Fixed Paladin T0,5 questline in prep guide

3.17b
- Actually fixed item for 'The Battle of Darrowshire' quest

3.17 (2026-01-14)
- Fixed comment for 'The Twilight Lexicon'
- Fixed item for 'The Battle of Darrowshire' quest
- Fixed the DireMaul Blacksmithing selection crashing the addon
- Added new flightpaths added to Kalimdor & Eastern Kingdoms
- Changed all routes to fly to Emerald Sanctuary in felwood now.
- Companion: Now picks up mail in Felwood at Bloodvenom Post (Was that mailbox always there??)
- Now only shows the 3.15 questlog warning for level 60 characters, and it should stop showing in the next update (3.18)

3.16 (2016-01-12)
- Removed the 0xp warning for the quest 'Medallion of Faith'
- ExtraPrep: Fixed some issues with the Rhok'delar quests that can be added
- ExtraPrep: Added class books & Quel'Serrar DireMaul quests to the 'Blacksmithing - Dire Maul' selection
- ExtraPrep: Quests from unselected extraprep no longer shows up on the 'Items' tab
- ExtraPrep: Scepter of the Sands quests now only show items if you have done their prequests
- Companion: No longer goes to the next step if you're missing 0 items, as it could lead to unexpecting jumping now before release.
- Companion: Fixed weird behaviour with the Bijou quest
- Added the 2 Morrowgrain quests that come after 'Un'goro Soil'. Low exp but almost free.

3.15 (2026-01-12)
- We realized 'questlog' quests didn't calculate the correct exp based on your level. Please check that your questlog quests are still good! If quests now give low exp, you need to fix it!
-- 'Summoning Shadra' has been removed as a questlog quest because of this. If you already prepared it, please turn it in (don't abandon)
-- Addon will show a warning as well the first time you log in after updating
